@@ -21,6 +21,7 @@ DarkTrayIcon=false
 MinimizeToTray=false
 MinimizeOnClose=false
 MinimizeOnStartup=false
+MonospaceNotes=false
 MainWindowGeometry="@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x2(\0\0\0\xbd\0\0\x5W\0\0\x3;\0\0\x2\x30\0\0\0\xdc\0\0\x5O\0\0\x3\x33\0\0\0\0\0\0\0\0\a\x80)"
 SplitterState=@Invalid()
 EntryListColumnSizes=@Invalid()
